--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
     <title>AR Tetris</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Removed Tailwind CSS CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.77/Tone.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <!-- Removed Google Fonts CDN -->
     <style>
         body {
-            font-family: 'Orbitron', sans-serif;
+            /* Replaced 'Orbitron' with a standard monospace font stack */
+            font-family: Consolas, 'Courier New', monospace;
             background-color: #000000;
             color: #ffffff;
             overflow: hidden;
@@ -103,7 +104,7 @@
             background: rgba(0, 0, 0, 0.5);
             border-radius: 10px;
             border: 1px solid rgba(0, 255, 255, 0.2);
-            font-family: 'Share Tech Mono', monospace; /* New legible font */
+            /* font-family removed to inherit from body */
             font-size: clamp(1rem, 2.5vw, 1.3rem);
             text-align: center;
             z-index: 10;
@@ -125,6 +126,27 @@
             color: #90EE90;
             text-shadow: 0 0 5px #90EE90;
         }
+        
+        /* --- Styles for classes previously handled by Tailwind --- */
+        #start-screen p {
+            margin-top: 2rem; /* mt-8 */
+            font-size: 1.125rem; /* text-lg */
+            color: #9CA3AF; /* text-gray-400 */
+        }
+        
+        footer {
+            position: absolute;
+            bottom: 0.5rem; /* bottom-2 */
+            left: 0; /* left-0 */
+            right: 0; /* right-0 */
+            text-align: center; /* text-center */
+            color: #6B7281; /* text-gray-500 */
+            font-size: 0.75rem; /* text-xs */
+            z-index: 30; /* z-30 */
+            opacity: 0.5; /* opacity-50 */
+            /* font-family removed to inherit from body */
+        }
+        /* --- End of replaced styles --- */
     </style>
 </head>
 <body>
@@ -145,7 +167,8 @@
     <div id="start-screen" class="screen-overlay visible">
         <h1 class="title">AR TETRIS</h1>
         <button id="start-button" class="button">START GAME</button>
-        <p class="mt-8 text-lg text-gray-400">Swipe to Move | Tap to Rotate | Swipe Down to Drop</p>
+        <!-- Removed Tailwind classes from this <p> tag -->
+        <p>Swipe to Move | Tap to Rotate | Swipe Down to Drop</p>
     </div>
 
     <!-- Game Over Screen -->
@@ -158,7 +181,8 @@
         <button id="restart-button" class="button" style="border-color:#ff0000; text-shadow:0 0 5px #ff0000; box-shadow: 0 0 10px #ff0000 inset, 0 0 10px #ff0000;">PLAY AGAIN</button>
     </div>
 
-    <footer class="absolute bottom-2 left-0 right-0 text-center text-gray-500 text-xs z-30 opacity-50" style="font-family: 'Share Tech Mono', monospace;">
+    <!-- Removed Tailwind classes from this <footer> tag -->
+    <footer>
         Created by Vivek Viswanathan
     </footer>
 
@@ -632,5 +656,4 @@
     </script>
 </body>
 </html>
-
 
