--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       Replaced local file paths with CDN links to make this
       a single, self-contained HTML file that works anywhere.
     -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.77/Tone.js"></script>
+    <script src="https://github.com/vickeyviswanathan/tetris/blob/main/three.min.js"></script>
+    <script src="https://github.com/vickeyviswanathan/tetris/blob/main/Tone.js"></script>
     
     <style>
         body {
